Tinkering around a bit with the UI. Adding heatmap display type.

--- a/RavelDev.KentMapping.Police.WebUi/package.json
+++ b/RavelDev.KentMapping.Police.WebUi/package.json
@@ -10,12 +10,14 @@
     "@vuepic/vue-datepicker": "^4.0.1",
     "axios": "^1.1.3",
     "leaflet": "^1.9.4",
+    "leaflet.heat": "^0.2.0",
     "moment": "^2.29.4",
     "pinia": "^2.0.13",
     "vee-validate": "^4.5.11",
     "vue": "^3.2.41",
     "vue-router": "^4.0.14",
     "vue3-datepicker": "^0.3.4",
+    "vue3-toastify": "^0.2.8",
     "vuetify": "^3.1.6",
     "yarn": "^1.22.19",
     "yup": "^0.32.11"
