--- a/RavelDev.KentMapping.Police.WebApi/RavelDev.KentMapping.Police.WebApi.csproj
+++ b/RavelDev.KentMapping.Police.WebApi/RavelDev.KentMapping.Police.WebApi.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>c93d0849-90a1-49e7-ac11-2eba060ad5b5</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
